# tts-server

./: .env.example  .gitignore  README.md  config.yml  example_of_sd_recording.py  main.py  pyproject.toml
tts-server/domain/: models.py
tts-server/ports/: repository.py  tts.py
tts_server/adapters/audio/: sounddevice.py
tts_server/adapters/repository/: filesystem.py  repository.py
tts_server/adapters/tts/: coqui.py
tts_server/api/: app.py  audio_router.py  main_router.py  response_models.py  tts_router.py  voice_training_router.py
tts_server/core/: di.py  settings.py
tts_server/domain/: models.py
tts_server/ports/: audio.py  clone_voice.py  repository.py  tts.py
tts_server/services/: audio_playback.py  clone_speech.py  clone_voice.py  synth_play.py  text_to_speech.py
